# cleave

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  cleave.cppcheck
editor/src/: CMakeLists.txt  Editor.cpp  Editor.hpp  GameView.cpp  GameView.hpp  Hierarchy.cpp  Hierarchy.hpp  Properties.cpp  Properties.hpp  main.cpp
res/scenes/: TestScene.jscn
res/shaders/: color.vert  sprite.frag  sprite.vert  text.frag
resources/shaders/: main.frag  main.vert
runtime/src/: CMakeLists.txt  Input.cpp  Input.hpp  JsonSceneSerializer.cpp  JsonSceneSerializer.hpp  Log.hpp  Matrix4.cpp  Matrix4.hpp  Rect4.hpp  Scene.cpp  Scene.hpp  Services.cpp  Services.hpp  Transform.cpp  Transform.hpp  UUID.hpp  Vec2.hpp  Window.cpp  Window.hpp  main.cpp
runtime/src/audio/: AudioManager.cpp  AudioManager.hpp  SoLoudBackend.cpp  SoLoudBackend.hpp
runtime/src/editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorContext.cpp  EditorContext.hpp  FileExplorer.cpp  FileExplorer.hpp  GameView.cpp  GameView.hpp  Hierarchy.cpp  Hierarchy.hpp  MainMenuBar.cpp  MainMenuBar.hpp  Properties.cpp  Properties.hpp
runtime/src/entities/: AnimatedSprite.cpp  AnimatedSprite.hpp  Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  SoundPlayer.cpp  SoundPlayer.hpp  Sprite.cpp  Sprite.hpp  Tilemap.cpp  Tilemap.hpp  WorldLabel.cpp  WorldLabel.hpp
runtime/src/entities/ui/: Button.cpp  Button.hpp  Widget.cpp  Widget.hpp
runtime/src/math/: Matrix4.cpp  Matrix4.hpp  Rect4.hpp  Transform.cpp  Transform.hpp  Vec2.hpp
runtime/src/platform/: FileDialog.hpp  MessageBox.hpp
runtime/src/platform/win32/: FileDialog.cpp  MessageBox.cpp
runtime/src/rendering/: BlendMode.hpp  Color.hpp  FontHandle.hpp  Material.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  RenderCommand.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTargetHandle.hpp  Renderer.cpp  Renderer.hpp  ShaderHandle.hpp  TextureFormat.hpp  TextureHandle.hpp
runtime/src/resources/: Font.cpp  Font.hpp  Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  ShaderLoader.hpp  Sound.cpp  Sound.hpp  Texture.cpp  Texture.hpp  TextureLoader.hpp
runtime/src/scene/: EntityRegistry.hpp  JsonSceneSerializer.cpp  JsonSceneSerializer.hpp  Scene.cpp  Scene.hpp
runtime/src/services/: AudioManager.cpp  AudioManager.hpp  InputManager.cpp  InputManager.hpp  ResourceManager.cpp  ResourceManager.hpp  Service.hpp  Services.hpp
